manifests/gke-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-web
  namespace: fortune-dev
  labels:
    app: fortune-web
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune-web
  template:
    metadata:
      labels:
        app: fortune-web
        env: dev
    spec:
      containers:
        - name: fortune-web
          image: asia-northeast3-docker.pkg.dev/gcp-assign-494513/gke-gitops-images/fortune-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
