manifests/gke-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-web-svc
  namespace: fortune-dev
spec:
  type: NodePort
  selector:
    app: fortune-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
